tests/tooling/fixtures/native/recovery/negative/negative_assignment_parser_missing_shift_left_assign_rhs.objc3
// Expected diagnostic code(s): O3P103.
module NegativeAssignmentParserMissingShiftLeftAssignRhs;

fn main() -> i32 {
  let value = 1;
  value <<= ;
  return value;
}
